--- a/notebooks/Dialog Flow Analysis Notebook.ipynb
+++ b/notebooks/Dialog Flow Analysis Notebook.ipynb
@@ -100,7 +100,11 @@
    "source": [
     "# Note, on Watson Studio the pip magic command `%pip` is not supported from within the notebook.  Use !pip instead. \n",
     "#!pip install --user conversation_analytics_toolkit\n",
-    "%pip install --user conversation_analytics_toolkit"
+    "#%pip install --user conversation_analytics_toolkit\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('../src/conversation_analytics_toolkit'))\n",
+    "%pip install ../dist/conversation_analytics_toolkit-0.0.0-py3-none-any.whl"
    ]
   },
   {
